save a videogame and display it in the show view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 			<div class="panel-body">
 				<h2 class="text-center">Hello</h2>
 				<br>
-
+				<a class="btn btn-info" href="/videogames/add" ><span class="glyphicon glyphicon-plus"> Ajouter un jeu vidéo</span></a>
 			</div>
 		</div>
 	</div>
