Added the form to add an analysis

--- a/app/views/video_games/_form.html.erb
+++ b/app/views/video_games/_form.html.erb
@@ -11,8 +11,8 @@
         </div>
     <% end %>
 
-    <div class="col-md-6 col-md-offset-3 panel panel-default">
-        <div class="panel-body">
+    <div class="panel panel-default">
+        <div class="panel-body ">
             <div class="form-group">
                 <label for="name">Nom du jeu vidéo: </label>
                 <input type="text" class="form-control" id="name" name="name">
