--- a/app/views/video_games/new.html.erb
+++ b/app/views/video_games/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Video Game</h1>
+<div class="col-md-8 col-md-offset-2">
+	<h1>New Video Game</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', video_games_path %>
+	<%= link_to 'Back', video_games_path %>
+
+</div>
